// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles TypeScript 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                 status
  1 kB  0        multi ./js/script.ts   built
  1 kB  1        ./js/script.ts         built
  1 kB  2        ./js/Component.ts      built
  1 kB  3        ./js/SomeLibrary.ts    built

  size  name     asset                  status
  1 kB  js       0.myBundle.min.js      emitted
  1 kB  map      0.myBundle.min.js.map  emitted
  1 kB  ts       js/Component.d.ts      emitted
  1 kB  ts       js/SomeLibrary.d.ts    emitted
  1 kB  ts       js/script.d.ts         emitted
  1 kB  default  myBundle.min.js        emitted
  1 kB  default  myBundle.min.js.map    emitted



  Compiled with warnings.

myBundle.min.js from UglifyJs
Dropping unused variable result [webpack/bootstrap UNIQUE_ID]

  Δt ____ms ⚠  1 problem (0 errors, 1 warning)

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript 2`] = `
"!function(e,n){if(\\"object\\"==typeof exports&&\\"object\\"==typeof module)module.exports=n();else if(\\"function\\"==typeof define&&define.amd)define([],n);else{var t=n();for(var o in t)(\\"object\\"==typeof exports?exports:e)[o]=t[o]}}(\\"undefined\\"!=typeof self?self:this,function(){return function(e){function n(t){if(o[t])return o[t].exports;var r=o[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,n),r.l=!0,r.exports}var t=window.webpackJsonp;window.webpackJsonp=function(n,o,u){for(var i,c,f=0,a=[];f<n.length;f++)c=n[f],r[c]&&a.push(r[c][0]),r[c]=0;for(i in o)Object.prototype.hasOwnProperty.call(o,i)&&(e[i]=o[i]);for(t&&t(n,o,u);a.length;)a.shift()()};var o={},r={1:0};return n.e=function(e){function t(){c.onerror=c.onload=null,clearTimeout(f);var n=r[e];0!==n&&(n&&n[1](new Error(\\"Loading chunk \\"+e+\\" failed.\\")),r[e]=void 0)}var o=r[e];if(0===o)return new Promise(function(e){e()});if(o)return o[2];var u=new Promise(function(n,t){o=r[e]=[n,t]});o[2]=u;var i=document.getElementsByTagName(\\"head\\")[0],c=document.createElement(\\"script\\");c.type=\\"text/javascript\\",c.charset=\\"utf-8\\",c.async=!0,c.timeout=12e4,n.nc&&c.setAttribute(\\"nonce\\",n.nc),c.src=n.p+\\"\\"+e+\\".myBundle.min.js\\";var f=setTimeout(t,12e4);return c.onerror=c.onload=t,i.appendChild(c),u},n.m=e,n.c=o,n.d=function(e,t,o){n.o(e,t)||Object.defineProperty(e,t,{configurable:!1,enumerable:!0,get:o})},n.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(t,\\"a\\",t),t},n.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},n.p=\\"\\",n.oe=function(e){throw console.error(e),e},n(n.s=0)}([function(e,n,t){e.exports=t(1)},function(e,n,t){\\"use strict\\";Object.defineProperty(n,\\"__esModule\\",{value:!0});var o=t(2),r=function(){function e(){console.log(\\"init class\\")}return e.prototype.method=function(){console.log(Object(o.a)(2,4)),t.e(0).then(t.bind(null,3)).then(function(e){var n=new e.default;console.log(n.add(2,4))})},e}();n.default=r},function(e,n,t){\\"use strict\\";function o(e,n){return e+n}n.a=o}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript 3`] = `
"webpackJsonp([0],{3:function(t,e,n){\\"use strict\\";Object.defineProperty(e,\\"__esModule\\",{value:!0});var r=function(){function t(){}return t.prototype.add=function(t,e){return t+e},t.prototype.substract=function(t,e){return t-e},t.prototype.divide=function(t,e){return t/e},t}();e.default=r}});
//# sourceMappingURL=0.myBundle.min.js.map"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stderr": "[js_myTSBundle] (!) __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts(14,1): syntax error TS1068 Unexpected token. A constructor, method, accessor, or property was expected.
js/typescript.ts
[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Error: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts(14,1): syntax error TS1068 Unexpected token. A constructor, method, accessor, or property was expected.
    ...stacktrace...
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
",
}
`;

exports[`Lints TypeScript with webpack 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                 status
  1 kB  0        multi ./js/script.ts   built
  1 kB  1        ./js/script.ts         built ⚠
  1 kB  2        ./js/Component.ts      built ⚠
  1 kB  3        ./js/SomeLibrary.ts    built ⚠

  size  name     asset                  status
  1 kB  js       0.myBundle.min.js      emitted
  1 kB  map      0.myBundle.min.js.map  emitted
  1 kB  ts       js/Component.d.ts      emitted
  1 kB  ts       js/SomeLibrary.d.ts    emitted
  1 kB  ts       js/script.d.ts         emitted
  1 kB  default  myBundle.min.js        emitted
  1 kB  default  myBundle.min.js.map    emitted



  Compiled with warnings.

./js/Component.ts
__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/Component.ts:2:24
ERROR: 2:24  whitespace       missing whitespace
ERROR: 3:18  no-multi-spaces  Multiple spaces found before 'b'.

 @ ./js/script.ts 1:0-35
 @ multi ./js/script.ts

./js/SomeLibrary.ts
__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/SomeLibrary.ts:12:5
ERROR: 12:5  one-line  misplaced opening brace

 @ ./js/script.ts 8:8-31
 @ multi ./js/script.ts

./js/script.ts
__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/script.ts:6:5
ERROR: 6:5   no-console  Calls to 'console.log' are not allowed.
ERROR: 10:5  no-console  Calls to 'console.log' are not allowed.
ERROR: 13:5  one-line    misplaced opening brace
ERROR: 16:7  no-console  Calls to 'console.log' are not allowed.
ERROR: 17:7  semicolon   Missing semicolon

 @ multi ./js/script.ts

myBundle.min.js from UglifyJs
Dropping unused variable result [webpack/bootstrap UNIQUE_ID]

  Δt ____ms ⚠  4 problems (0 errors, 4 warnings)

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
